--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -80,6 +80,17 @@ box-shadow: 0 5px blue;
 transform: translateY(4px);
 }
 
+.block {
+  display: block;
+  width: 100%;
+  border: none;
+  background-color: #FFFFFF;
+  padding: 0px 0px;
+  font-size: 16px;
+  cursor: pointer;
+  text-align: center;
+}
+
 /* Basic */
 
 	@-ms-viewport {
