--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -2257,6 +2257,11 @@ transform: translateY(4px);
 			}
 
 /* Form */
+h1{
+	text-align: center;
+	 font-weight: bold;
+  font-size: 32px;
+}
 
 	form {
 		margin: 0 0 2rem 0;
