--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -71,7 +71,7 @@ input, select, textarea {
 }
 
 .button:hover{
-background-color: yellow;
+background-color: white;
 }
 
 .button:active {
@@ -199,7 +199,7 @@ transform: translateY(4px);
 		margin: 0 0 2rem 0;
 	}
 
-	h1, h2, h3, h4, h5, h6 {
+	h1, h2 {
 		font-family: "Source Sans Pro", Helvetica, sans-serif;
 		font-weight: 900;
 		line-height: 1.5;
@@ -208,7 +208,7 @@ transform: translateY(4px);
 		margin: 0 0 1rem 0;
 	}
 
-		h1 a, h2 a, h3 a, h4 a, h5 a, h6 a {
+		h1 a, h2 a {
 			border-bottom: 0;
 			color: inherit;
 			text-decoration: none;
@@ -224,23 +224,6 @@ transform: translateY(4px);
 		font-size: 1.75rem;
 		line-height: 1.3;
 		margin: 0 0 1.5rem 0;
-	}
-
-	h3 {
-		font-size: 1.25rem;
-		margin: 0 0 1.5rem 0;
-	}
-
-	h4 {
-		font-size: 1rem;
-	}
-
-	h5 {
-		font-size: 0.9rem;
-	}
-
-	h6 {
-		font-size: 0.8rem;
 	}
 
 	sub {
