--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -199,7 +199,7 @@ transform: translateY(4px);
 		margin: 0 0 2rem 0;
 	}
 
-	h1, h2 {
+	h1, h2, h3, h4 {
 		font-family: "Source Sans Pro", Helvetica, sans-serif;
 		font-weight: 900;
 		line-height: 1.5;
@@ -208,7 +208,7 @@ transform: translateY(4px);
 		margin: 0 0 1rem 0;
 	}
 
-		h1 a, h2 a {
+		h1 a, h2 a, h3 a, h4 a {
 			border-bottom: 0;
 			color: inherit;
 			text-decoration: none;
@@ -221,9 +221,19 @@ transform: translateY(4px);
 	}
 
 	h2 {
-		font-size: 1.75rem;
+		font-size: 3rem;
 		line-height: 1.3;
 		margin: 0 0 1.5rem 0;
+	}
+
+	h3 {
+		font-size: 2.5rem;
+		margin: 0 0 1.5rem 0;
+		text-align:center;
+	}
+
+	h4 {
+		font-size: 2.5rem;
 	}
 
 	sub {
